# sc2gameanalizer

./: .env.example  .gitignore  CLAUDE.md  FEATURE_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  ML_SIMILARITY_UPGRADE.md  PHASE1_COMPLETE.md  README.md  TAILSCALE.md  Taskfile.yml  pyproject.toml  requirements.txt  run-backend.sh  run-frontend.sh  test-new-features.spec.ts  validate-calculations.spec.ts
backend/: Dockerfile  Procfile  auth.py  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-backend.sh  similarity.py
backend/api/: __init__.py  analysis.py  auth.py  crypto_payments.py  main.py  ml_similarity.py  similarity.py
backend/core/: __init__.py  build_signature.py  database_writer.py  gap_analyzer.py  generate_pro_database.py  replay_parser.py  similarity_matcher.py
backend/db/: base.py
backend/models/: __init__.py  build_event.py  game.py  pro_game.py  snapshot.py
backend/schemas/: __init__.py  game.py
backend/scripts/: approve_user.py  (+2 more)
docs/: 04-technical-guidelines.md  2026-01-15-sc2-replay-analyzer-design.md  BASE_COUNT_FIX.md  KILL_DEATH_TRACKING_FIX.md  MANUAL_VALIDATION.md  WORKFLOW.md
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
notebooks/: crypto_seed.ipynb
scripts/: DOWNLOAD_TESTING_RESULTS.md  download_replays.py  import_pro_replays.py
src/: __init__.py  build_order.py  constants.py  database.py  generate.py  parser.py  processor.py  snapshot.py  validate.py
tests/: __init__.py  test_parser.py  test_snapshot.py
(+72 files in other folders)
